--- a/HTMLImage/templates/home.html
+++ b/HTMLImage/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Home</title></head>
 <body>
-  <h1>Welcome to My Image Site</h1>
+  <h1>Welcome to Alvin's Image Site</h1>
   <p><a href="/gallery">Go to Gallery</a></p>
   <p><a href="/add">Add New Image</a></p>
 </body>
